--- a/views/home.html
+++ b/views/home.html
@@ -30,12 +30,15 @@
             <li><a href="/about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="/images">Images</a></li> 
             <li><a href="/employees">Employees</a></li>
+            <li><a href="/employees/add">Add Employees</a></li>
+            <li><a href="/images/add">Add image</a></li>
             <li><a href="/managers">Managers</a></li>
             <li><a href="/departments">Departments</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+        </div>
+      </div>
     </nav>
     <div class="container">
       <div class="row">
