--- a/views/addImage.html
+++ b/views/addImage.html
@@ -48,6 +48,7 @@
       <div class="col-md-12">
         <h2>Add Image</h2>
         <br>
+        <!-- Form for uploading image files to the server -->
         <form action="/images/add" enctype="multipart/form-data" method="post">
           <div class="row">
             <div class="col-md-12">
