--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -25,16 +25,16 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="/about">About</a></li>
+            {{#navLink "/"}}Home{{/navLink}}
+            {{#navLink "/about"}}About{{/navLink}}
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/images">Images</a></li> 
-            <li><a href="/employees">Employees</a></li>
-            <li><a href="/employees/add">Add Employees</a></li>
-            <li><a href="/images/add">Add image</a></li>
-            <li><a href="/managers">Managers</a></li>
-            <li><a href="/departments">Departments</a></li>
+            {{#navLink "/images"}}Images{{/navLink}}
+            {{#navLink "/employees"}}Employees{{/navLink}}
+            {{#navLink "/employees/add"}}Add Employees{{/navLink}}
+            {{#navLink "/images/add"}}Add Image{{/navLink}}
+            {{#navLink "/managers"}}Managers{{/navLink}}
+            {{#navLink "/departments"}}Departments{{/navLink}}
           </ul>
         </div>
       </div>
