--- a/views/images.hbs
+++ b/views/images.hbs
@@ -5,7 +5,8 @@
     </div>
     <div class="col-md-4">
         {{#each data}}
-            <img src="{{this}}" class="img-responsive img-thumbnail" alt="{{this}}"/>
+            <p>{{this}}</p>
+            <img src="/images/uploaded/{{this}}" class="img-responsive img-thumbnail" alt="{{this}}"/>
 
         {{else}}
             <div class="col-md-12 text-center">
