--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -1,6 +1,9 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>Employees</h2>
+        <h2>
+            Employees
+            <a href="/employees/add" class="btn btn-success pull-right">Add New Employee</a>
+        </h2>
         <hr>
         <div class="table-responsive">
             <table class="table">
@@ -27,15 +30,15 @@
                         <td><a href="/employees?status={{status}}">{{status}}</a></td>
                         <td><a href="/employees?department={{department}}">{{department}}</a></td>
                         <td>{{hireDate}}</td>
-                    {{/each}}   
+                        {{/each}}
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
     {{#unless data}}
-        <div class="col-md-12 text-center">
-            <strong>{{message}}</strong>
-        </div>
+    <div class="col-md-12 text-center">
+        <strong>{{message}}</strong>
+    </div>
     {{/unless}}
 </div>
