--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -1,36 +1,33 @@
 <div class="row">
-    <div class="col-md-12">
-        <h2>
-            Departments
-            <a href="/departments/add" class="btn btn-success pull-right">Add New Department</a>
-        </h2>
-        <hr>
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Department&nbsp;Number</th>
-                        <th>Department&nbsp;Name</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each data}}
-                    <tr>
-                        <td>
-                            <a href="/employees?department={{departmentId}}">{{departmentId}}</a>
-                        </td>
-                        <td>
-                            <a href="/employees?department={{departmentId}}">{{departmentName}}</a>
-                        </td>
-                    {{/each}}   
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+  <div class="col-md-12">
+    <h2>Departments
+      <a href="/departments/add" class="btn btn-success pull-right">Add New Department</a>
+    </h2>
+    <hr />
+    <div class="table-responsive">
+      <table class="table ">
+        <thead>
+          <tr>
+            <th>Department Number</th>
+            <th>Department Name</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each departments}}
+          <tr>
+            <td><a href="/employees?department={{departmentId}}"> {{departmentId}} </a></td>
+            <td><a href="/department/{{departmentId}}">{{departmentName}}</a></td>
+            <td><a href="/departments/delete/{{departmentId}}" class="btn btn-danger">remove</a></td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
     </div>
-    {{#unless data}}
-        <div class="col-md-12 text-center">
-            <strong>{{message}}</strong>
-        </div>
-    {{/unless}}
+  </div>
+  {{#unless departments}}
+  <div class="col-md-12 text-center">
+    <strong>{{message}}</strong>
+  </div>
+  {{/unless}}
 </div>
